apps/media-stack/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  parentRefs:
    - kind: Gateway
      name: cilium
      namespace: gateway
      sectionName: https
  hostnames:
    - "prowlarr.${DOMAIN}"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: prowlarr
          port: 9696
